2005-04-19  Angus Leeming  <leeming@lyx.org>

	* filetools.C: remove unnecessary #include of forkedcontr.h.

	* forkedcall.C: protect system-specific headers with preprocessor
	guards.
	(running): don't call waitpid() on Windows.
	(waitForChild): add Windows-specific code to wait for a child process
	to finish.
	(generateChild): add Windows-specific code to spawn the child in the
	first place.

	* forkedcontr.[Ch]:Revert back to the LyX 1.3.x version of the code
	to spawn a child process asynchronously. Do this because 'issues'
	remain with the SIGCHLD handling code on *nix and because there's no
	easy way to implement such a monitor on Windows. Explicit polling,
	as in Lyx 1.3.x, is safe, robust and works on both platforms.

2005-04-19  Angus Leeming  <leeming@lyx.org>

	* package.C.in (get_temp_dir): call GetLongPathName on Windows.

2005-04-19  Angus Leeming  <leeming@lyx.org>

	* pch.h: protect unix-specific headers from breaking compilation
	on Windows.

2005-04-17  Angus Leeming  <leeming@lyx.org>

	* filetools.C (MakeDisplayPath): invoke os::external_path before
	returning path.

	* os_win32.C (external_path): convert '/' chars to '\'.

	* filetools.[Ch] (latex_path): new function which modifies
	an input path containing space and '~' characters into something that
	LaTeX can understand.

2005-04-17  Angus Leeming  <leeming@lyx.org>

	* forkedcall.C (generateChild): do not strip quotes from args on
	Windows.
	Wrap lyxerr output inside an if (lyxerr.debugging(Debug::FILES))
	block.

2005-03-23  Angus Leeming  <leeming@lyx.org>

	* Makefile.am (build_package): Solaris sed does not like
	spaces bewteen the ;-delimited commands.

2005-02-25  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* Makefile.am (CLEANFILES): clean generated files

2005-02-17  Angus Leeming  <leeming@lyx.org>

	* copy.C (copy): Pass the ios::in flag to the ifstream constructor.
	Enables copying to work when the code is compiled with the gcc 2.95
	compiler and stdlib.
